# dregg

./: .dockerignore  .gitignore  AIR-SOUNDNESS-AUDIT.md  APPLY-METHODS-NOTES.md  APPS-AS-USERSPACE-AUDIT.md  AUDIT-CRATE-DISPOSITION.md  AUDIT-FINDINGS.md  AUDIT-distributed-semantics.md  AUDIT-extension.md  AUDIT-morpheus-federation-blocklace.md  AUDIT-offline-mode.md  AUDIT-privacy.md  AUDIT-turn-executor.md  AUDIT-wasm.md  AUTHORIZATION-CUSTOM-DESIGN.md  BOUNDARIES.md  CAVEAT-LAYER-COVERAGE.md  CELL-CRATE-REVIEW.md  CHANGELOG.md  CIRCUIT-VERIFIER-TEST-AUDIT.md  CROSS-CELL-CATEGORICAL-ANALYSIS.md  CROSS-CELL-COORDINATION.md  Cargo.toml  DEMO-INTERACTION-MATRIX.md  DESIGN-captp-integration.md  DESIGN-commitment-framework.md  DESIGN-dsl.md  DESIGN-max-custom-effects.md  DESIGN-pipelined-send.md  DESIGN-receipts.md  DFA-RATIONALIZATION-DESIGN.md  EFFECT-VM-SHAPE-A.md  EXECUTOR-VK-AUDIT.md  FEDERATION-AS-CELL.md  FEDERATION-CAPTP-TEST-AUDIT.md  GROK-EXPERIMENT-LOG.md  HOUYHNHNM-COMPARISON.md  HOUYHNHNM-DEEP-CRITIQUE.md  INTENT-BRIDGE-TEST-AUDIT.md  KIMCHI-SURVEY.md  (+35 more)
app-framework/: Cargo.toml
app-framework/src/: authorizer.rs  blinded_endpoint.rs  captp_server.rs  cipherclerk.rs  dispute.rs  escrow.rs  fee_policy.rs  inbox_endpoint.rs  lib.rs  middleware.rs  server.rs  starbridge.rs  vk.rs  wallet.rs
app-framework/tests/: cipherclerk_sign_action.rs  escrow_authorization.rs  integration_app_cipherclerk_lifecycle.rs  no_unchecked.rs  wallet_sign_action.rs
blocklace/: Cargo.toml
blocklace/src/: addressing.rs  constitution.rs  cross_reference.rs  delegation.rs  dissemination.rs  dregg_bridge.rs  finality.rs  finality_tests.rs  lib.rs  ordering.rs  pyana_bridge.rs
bridge/: Cargo.toml
bridge/benches/: presentation_bench.rs
bridge/contracts/: deploy.ts  package.json  pyana_bridge.compact
bridge/mina-zkapp/: package-lock.json  package.json  tsconfig.json
bridge/src/: action_binding.rs  authorize.rs  convert.rs  delta.rs  lib.rs  midnight.rs  midnight_contract.compact  midnight_observer.rs  mina.rs  present.rs  tests.rs  verifier.rs
bridge/tests/: integration_action_binding.rs  integration_midnight_bridge.rs  integration_present_credential.rs
captp/: Cargo.toml
captp/src/: gc.rs  handoff.rs  lib.rs  pipeline.rs  session.rs  store_forward.rs  sturdy.rs  uri.rs
captp/tests/: integration.rs  integration_gc_collection.rs  integration_sturdy_ref_serde.rs  integration_swiss_table_revoke.rs  integration_three_party_handoff.rs
cell/: Cargo.toml  REVIEW-CONCEPTUAL.md  REVIEW-EFFICIENCY.md
cell/examples/: predicate_language.rs
cell/src/: capability.rs  capability_proof.rs  cell.rs  commitment.rs  custom_effect.rs  delegation.rs  derivation.rs  facet.rs  factory.rs  ledger.rs  lib.rs  lifecycle.rs  note.rs  note_bridge.rs  nullifier_set.rs  peer_exchange.rs  preconditions.rs  predicate.rs  program.rs  revocation_channel.rs  ring_closure.rs  seal.rs  state.rs  stealth.rs  tests.rs  unilateral.rs  value_commitment.rs  vk_v2.rs
cell/tests/: integration_destroy_terminal.rs  integration_renounced.rs  proptest_nullifier.rs
chain/: Cargo.toml  README.md  build.rs
chain/program/: Cargo.toml
chain/src/: credential.rs  error.rs  lib.rs  mock.rs  prove.rs  verify.rs  withdraw.rs
circuit/: Cargo.toml
circuit/benches/: practical_benchmarks.rs  proof_benchmarks.rs
circuit/examples/: fri_from_scratch.rs
circuit/sp1-guest/: Cargo.toml  rust-toolchain.toml
circuit/src/: accumulator_air.rs  accumulator_types.rs  air_descriptor.rs  arithmetic_predicate_air.rs  bilateral_aggregation_air.rs  binding.rs  block_transition_air.rs  body_membership.rs  bridge_action_air.rs  bridge_lock_action_air.rs  chunked_derivation.rs  committed_threshold.rs  compound_predicate_air.rs  constraint_prover.rs  cross_state_derivation.rs  derivation_air.rs  effect_action_air.rs  effect_interp.rs  effect_vm.rs  effect_vm_p3_air.rs  field.rs  fold_air.rs  fold_types.rs  garbled.rs  garbled_air.rs  ivc.rs  lib.rs  membership_adjacency_air.rs  merkle_air.rs  merkle_types.rs  multi_step_air.rs  native_signature.rs  non_membership.rs  non_revocation_air.rs  note_spending_air.rs  plonky3_prover.rs  plonky3_recursion.rs  plonky3_recursion_impl.rs  plonky3_verifier_air.rs  poseidon2.rs  (+21 more)
circuit/tests/: clockdag_demonstrator.rs  effect_vm_hash_truncation.rs  effect_vm_hash_widening.rs  federation_owner_binding.rs  fri_fold_beta_binding.rs  fri_fold_seed_sweep.rs  hash_constraint_degree.rs  integration_effect_vm_prove_verify.rs  integration_recursive_chain.rs  note_spend_full_width_binding.rs  note_spend_value_hi_binding.rs  sovereign_transition.rs  sovereign_witness_air_teeth.rs  state_constraint_air_teeth.rs  value_truncation_fix.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs  output.rs
coord/: Cargo.toml
coord/src/: atomic.rs  budget.rs  causal.rs  lib.rs  shared_budget.rs  tests.rs
credentials/: Cargo.toml
credentials/src/: issuance.rs  lib.rs  presentation.rs  revocation.rs  schema.rs  verification.rs
credentials/tests/: anonymity_soundness.rs  roundtrip.rs
demo/: Cargo.toml
demo-agent/: Cargo.toml
demo-agent/examples/: agent_network.rs  ai_agent_mcp_workflow.rs  atomic_swap_demo.rs  auction_demo.rs  base_private_transfer.rs  bench_summary.rs  cdt_revocation.rs  cipherclerk_lifecycle.rs  compute_marketplace.rs  cross_fed_atomic.rs  cross_federation_nft_swap.rs  delegation_demo.rs  delegation_swarm.rs  escrow_demo.rs  federation_exit.rs  intent_lifecycle.rs  ivc_attenuation_chain.rs  multi_org_delegation.rs  multi_silo_budget.rs  nft_demo.rs  note_bridge.rs  note_privacy.rs  (+18 more)
dfa/: Cargo.toml
directory/: Cargo.toml
discharge-gateway/: Cargo.toml
discord-bot/: Cargo.toml  README.md
dregg-lean-ffi/: .gitignore  Cargo.toml  README.md  build.rs
federation/: Cargo.toml
intent/: Cargo.toml
macaroon/: Cargo.toml
morpheus/: Cargo.toml
net/: Cargo.toml
node/: Cargo.toml
observability/: Cargo.toml  README.md
preflight/: Cargo.toml
protocol-tests/: Cargo.toml
pyana-dsl-differential/: Cargo.toml
pyana-dsl-runtime/: Cargo.toml
pyana-storage-templates/: Cargo.toml
(+1774 files in other folders)
