[workspace]
resolver = "3"
members = ["macaroon", "secrets", "token", "tokenizer", "hints", "commit", "trace", "demo", "demo-agent", "demo/sdk-consensus", "federation", "circuit", "audit", "bridge", "wire", "store", "cell", "turn", "coord", "tests", "types", "sdk", "wasm", "node", "intent", "net", "discharge-gateway", "teasting", "apps/bounty-board", "apps/compute-exchange", "apps/dao-treasury", "apps/gallery", "apps/identity", "apps/lending", "apps/amm", "apps/stablecoin", "apps/orderbook", "apps/prediction-market", "apps/privacy-voting", "apps/discord-bot", "apps/governed-namespace", "apps/nameservice", "apps/subscription", "app-framework", "pyana-dsl", "pyana-dsl-runtime", "pyana-dsl-tests", "preflight", "blocklace", "captp", "cli", "verifier", "protocol-tests", "observability"]
exclude = ["chain", "chain/program", "rbg", "storage"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["Pyana Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://pyana.dev"
repository = "https://github.com/emberian/pyana"

[patch.crates-io]
ark-serialize = { git = "https://github.com/emberian/algebra", branch = "serde-integration" }
ark-serialize-derive = { git = "https://github.com/emberian/algebra", branch = "serde-integration" }

[workspace.dependencies]
## Local
macaroon = { path = "macaroon", default-features = false }
pyana-net = { path = "net" }
pyana-types = { path = "types" }
secrets = { path = "secrets" }
token = { path = "token" }
tokenizer = { path = "tokenizer" }

## Plonky3 core (rev 82cfad73 — the version pyana proofs were validated against)
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-lookup = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }

## Plonky3-recursion fork updated to match p3 rev 82cfad73.
## Keep these as git dependencies so CI does not require a sibling checkout.
p3-recursion = { git = "https://github.com/emberian/plonky3-recursion", rev = "c14b5fc079af18d7f3ba3f3586f173bd166c7cd4" }
p3-circuit = { git = "https://github.com/emberian/plonky3-recursion", rev = "c14b5fc079af18d7f3ba3f3586f173bd166c7cd4" }
p3-circuit-prover = { git = "https://github.com/emberian/plonky3-recursion", rev = "c14b5fc079af18d7f3ba3f3586f173bd166c7cd4" }
p3-poseidon2-circuit-air = { git = "https://github.com/emberian/plonky3-recursion", rev = "c14b5fc079af18d7f3ba3f3586f173bd166c7cd4" }

## Crates.io
ark-serialize = { version = "0.5", features = ["derive"] }
# NOTE: RC needed for aead 0.6 trait unification with chacha20poly1305 0.10;
# stable aes-gcm 0.10 uses aead 0.5 which conflicts. Revisit when 0.11 stable ships.
aes-gcm = { version = "0.11.0-rc.3" }
base64 = { version = "0.22" }
chacha20poly1305 = { version = "0.10" }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { version = "1" }
directories = { version = "6" }
getrandom = { version = "0.3" }
globset = { version = "0.4" }
hmac = { version = "0.12" }
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
rmp-serde = { version = "1.3.1" }
scalable_cuckoo_filter = { version = "0.5", features = ["serde_support"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
subtle = { version = "2" }
tempfile = { version = "3" }
thiserror = { version = "2" }
tracing = { version = "0.1" }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["std", "derive"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
assign_op_pattern = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
derivable_impls = "allow"
explicit_auto_deref = "allow"
for_kv_map = "allow"
get_first = "allow"
if_same_then_else = "allow"
int_plus_one = "allow"
iter_overeager_cloned = "allow"
manual_is_multiple_of = "allow"
mem_replace_with_default = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_range_loop = "allow"
new_without_default = "allow"
ptr_arg = "allow"
question_mark = "allow"
redundant_closure = "allow"
should_implement_trait = "allow"
single_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_cast = "allow"
unnecessary_map_or = "allow"
unwrap_or_default = "allow"
useless_conversion = "allow"
useless_format = "allow"
vec_init_then_push = "allow"
wrong_self_convention = "allow"
identity_op = "allow"
manual_strip = "allow"
result_large_err = "allow"
doc_nested_refdefs = "allow"
large_enum_variant = "allow"
clone_on_copy = "allow"
extend_with_drain = "allow"
redundant_pattern_matching = "allow"
while_let_loop = "allow"
io_other_error = "allow"
manual_unwrap_or_default = "allow"
manual_unwrap_or = "allow"
manual_flatten = "allow"
print_literal = "allow"
manual_saturating_arithmetic = "allow"
large_const_arrays = "allow"
unused_enumerate_index = "allow"

[workspace.lints.rust]
unexpected_cfgs = "allow"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
