[package]
name = "pyana-app-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Reusable application framework for pyana apps — proof middleware, content stores, escrow lifecycle"

[dependencies]
pyana-sdk = { path = "../sdk" }
pyana-turn = { path = "../turn" }
pyana-intent = { path = "../intent" }
pyana-circuit = { path = "../circuit" }
pyana-cell = { path = "../cell" }
pyana-types = { path = "../types" }

axum = "0.8"
http = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
base64 = { workspace = true }
blake3 = "1"

[features]
default = []
dev = ["pyana-sdk/dev"]
middleware = []

[lints]
workspace = true
