[package]
name = "pyana-blocklace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Blocklace: a DAG-based structure for BFT consensus with cordial dissemination"

[dependencies]
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
postcard = { version = "1", features = ["use-std"] }
pyana-types = { path = "../types" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = "0.8"

[lints]
workspace = true
