[package]
name = "pyana-bridge"
version.workspace = true
edition.workspace = true

[features]
default = ["turn"]
turn = []
test-utils = []

[dependencies]
pyana-commit = { path = "../commit" }
pyana-trace = { path = "../trace" }
pyana-circuit = { path = "../circuit" }
pyana-turn = { path = "../turn" }
token = { path = "../token", default-features = false, features = ["macaroon", "datalog"] }
macaroon = { path = "../macaroon" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "presentation_bench"
harness = false
required-features = ["test-utils"]

[lints]
workspace = true
