[package]
name = "pyana-captp"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
getrandom = { workspace = true }
bs58 = "0.5"
postcard = { version = "1", features = ["use-std"] }
pyana-types = { path = "../types" }
pyana-cell = { path = "../cell" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
