[workspace]
# Standalone workspace — chain has dep conflicts with the main workspace
# (sp1-core-machine pins generic-array =1.1.0, nova-snark needs >=1.2.0).
# Build with: cd chain && cargo check
exclude = ["program"]

[package]
name = "pyana-chain"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["Pyana Contributors"]
license = "MIT OR Apache-2.0"
description = "EVM on-chain verification of pyana STARK proofs via SP1 wrapping (STARK -> Groth16)"

[dependencies]
# SP1 SDK for proof generation (host side)
# Requires `sp1up` toolchain: https://docs.succinct.xyz/docs/sp1/getting-started/install
# The SP1 prover compiles the guest program for riscv32im-succinct-zkvm-elf,
# then generates a Groth16/PLONK proof verifiable on EVM.
sp1-sdk = { version = "6", default-features = false, optional = true }

# EVM interaction (contract calls for on-chain verification)
alloy = { version = "1", features = ["providers", "contract", "signer-local", "reqwest"], optional = true }

# Pyana types for proof serialization
pyana-types = { path = "../types" }

# Shared with the circuit crate (STARK proof format)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
bincode = "1"

# Async runtime
tokio = { version = "1", features = ["rt", "macros"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hex encoding for contract addresses / proof bytes
hex = "0.4"

[build-dependencies]
sp1-build = { version = "6", optional = true }

[features]
default = ["mock"]
# Mock mode: stubs out SP1 proving for development without the SP1 toolchain.
# All APIs are available but produce simulated proofs.
mock = []
# Enable real SP1 proving (requires `sp1up` toolchain installed).
# Pulls in sp1-sdk and its full dependency tree.
prove = ["dep:sp1-sdk", "dep:sp1-build"]
# Enable on-chain submission via alloy.
on-chain = ["dep:alloy"]
