[package]
name = "pyana-circuit"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["Pyana Contributors"]
license = "MIT OR Apache-2.0"
description = "Zero-knowledge proof circuits for pyana authorization token chains"

[dependencies]
# Try plonky3 - fall back to mock if unavailable
p3-field = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-air = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-mds = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", optional = true }
p3-util = { git = "https://github.com/Plonky3/Plonky3", optional = true }

blake3 = "1"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }
itertools = { version = "0.14", optional = true }
rand = { version = "0.10", optional = true }
bincode = { version = "1", optional = true }
rmp-serde = { version = "1.2", optional = true }

# Halo2 (PSE fork) - Plonkish arithmetization with IPA/KZG
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", optional = true }
rand_core = { version = "0.6", optional = true, features = ["getrandom"] }

# Nova - folding-based IVC
nova-snark = { git = "https://github.com/microsoft/Nova", branch = "main", optional = true }
bellpepper-core = { git = "https://github.com/lurk-lab/bellpepper", branch = "main", optional = true }
ff = { version = "0.13", optional = true }

# Mina/Kimchi - Plonk variant over Pasta curves with IPA commitments
kimchi = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true, default-features = false, features = ["prover"] }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true, default-features = false, features = ["asm"] }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
groupmap = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
ark-ff = { version = "0.5", optional = true, default-features = false, features = ["asm"] }

# Binius - binary field tower proof system (Irreducible/Ulvetanna)
binius_core = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_field = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_math = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_circuits = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_macros = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true, default-features = false }
bumpalo = { version = "3.16", optional = true }
groestl_crypto = { package = "groestl", version = "0.10", optional = true }

[features]
default = ["mock"]
mock = []
plonky3 = [
    "p3-field", "p3-baby-bear", "p3-air", "p3-matrix", "p3-uni-stark",
    "p3-challenger", "p3-commit", "p3-fri", "p3-symmetric", "p3-dft",
    "p3-poseidon2", "p3-mds", "p3-monty-31", "p3-merkle-tree", "p3-util",
    "rand", "tracing", "itertools",
]
halo2 = ["halo2_proofs", "rand_core"]
nova = ["nova-snark", "bellpepper-core", "ff", "bincode", "rand"]
mina = [
    "kimchi", "poly-commitment", "mina-curves", "mina-poseidon", "groupmap",
    "ark-ff", "rmp-serde", "rand_core",
]
binius = [
    "dep:binius_core", "dep:binius_field", "dep:binius_hash",
    "dep:binius_hal", "dep:binius_math", "dep:binius_circuits",
    "dep:binius_macros", "dep:binius_utils", "dep:bumpalo",
    "dep:groestl_crypto",
]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "stark_bench"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[lints]
workspace = true
