[package]
name = "pyana-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Zero-knowledge proof circuits for pyana authorization token chains"

[dependencies]
# Plonky3 core (workspace-pinned)
p3-field = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }
p3-air = { workspace = true, optional = true }
p3-matrix = { workspace = true, optional = true }
p3-uni-stark = { workspace = true, optional = true }
p3-challenger = { workspace = true, optional = true }
p3-commit = { workspace = true, optional = true }
p3-fri = { workspace = true, optional = true }
p3-symmetric = { workspace = true, optional = true }
p3-dft = { workspace = true, optional = true }
p3-poseidon2 = { workspace = true, optional = true }
p3-mds = { workspace = true, optional = true }
p3-monty-31 = { workspace = true, optional = true }
p3-merkle-tree = { workspace = true, optional = true }
p3-util = { workspace = true, optional = true }

# Plonky3-recursion (workspace-pinned)
p3-recursion = { workspace = true, optional = true }
p3-circuit = { workspace = true, optional = true }
p3-circuit-prover = { workspace = true, optional = true }
p3-batch-stark = { workspace = true, optional = true }
p3-lookup = { workspace = true, optional = true }
p3-poseidon2-circuit-air = { workspace = true, optional = true }

blake3 = "1"
getrandom = { workspace = true }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }
itertools = { version = "0.14", optional = true }
rand = { version = "0.10", optional = true }
rmp-serde = { version = "1.2", optional = true }
rand_core = { version = "0.6", optional = true, features = ["getrandom"] }

# Mina/Kimchi - Plonk variant over Pasta curves with IPA commitments
kimchi = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true, default-features = false, features = ["prover"] }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true, default-features = false, features = ["asm"] }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
groupmap = { git = "https://github.com/o1-labs/proof-systems", rev = "36a8b510", optional = true }
ark-ff = { version = "0.5", optional = true, default-features = false, features = ["asm"] }
ark-poly = { version = "0.5", optional = true, default-features = false }
ark-ec = { version = "0.5", optional = true, default-features = false }

# Binius - binary field tower proof system (Irreducible/Ulvetanna)
binius_core = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_field = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_math = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_circuits = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_macros = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius", rev = "46eef325", optional = true, default-features = false }
bumpalo = { version = "3.16", optional = true }
groestl_crypto = { package = "groestl", version = "0.10", optional = true }

# SP1 - Succinct's RISC-V zkVM (proves Datalog evaluation as normal Rust execution)
sp1-sdk = { version = "6.2", optional = true }

[features]
default = ["mock", "recursion", "mina"]
mock = []
dev = []
plonky3 = [
    "p3-field", "p3-baby-bear", "p3-air", "p3-matrix", "p3-uni-stark",
    "p3-challenger", "p3-commit", "p3-fri", "p3-symmetric", "p3-dft",
    "p3-poseidon2", "p3-mds", "p3-monty-31", "p3-merkle-tree", "p3-util",
    "rand", "tracing", "itertools",
]
mina = [
    "kimchi", "poly-commitment", "mina-curves", "mina-poseidon", "groupmap",
    "ark-ff", "ark-poly", "ark-ec", "rmp-serde", "rand_core",
]
binius = [
    "dep:binius_core", "dep:binius_field", "dep:binius_hash",
    "dep:binius_hal", "dep:binius_math", "dep:binius_circuits",
    "dep:binius_macros", "dep:binius_utils", "dep:bumpalo",
    "dep:groestl_crypto",
]
sp1 = ["dep:sp1-sdk"]
recursion = [
    "plonky3",
    "dep:p3-recursion", "dep:p3-circuit", "dep:p3-circuit-prover",
    "dep:p3-batch-stark", "dep:p3-lookup", "dep:p3-poseidon2-circuit-air",
]

[dev-dependencies]
criterion = { workspace = true }
pyana-bridge = { path = "../bridge" }
token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
pyana-turn = { path = "../turn" }
getrandom = { workspace = true }

[[bench]]
name = "stark_bench"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[[bench]]
name = "practical_benchmarks"
harness = false

[lints]
workspace = true
